include/rpc/connection.h

struct rpc_connection;
struct rpc_call;
/**
 * Enumerates possible RPC error codes.
 */
typedef enum rpc_error_code
{
	RPC_INVALID_RESPONSE = 1,	/**< Received unreadable response */
	RPC_CONNECTION_TIMEOUT,		/**< Connection timed out */
	RPC_CONNECTION_CLOSED,		/**< Disconnect received */
	RPC_CALL_TIMEOUT,		/**< Request timed out */
	RPC_SPURIOUS_RESPONSE,		/**< Response to unknown request */
	RPC_LOGOUT,			/**< Logged out by server */
	RPC_OTHER			/**< Other or unknown reason */
} rpc_error_code_t;
/**
 * Definition of RPC connection pointer.
 */
typedef struct rpc_connection *rpc_connection_t;
/**
 * Definition of RPC call pointer.
 */
typedef struct rpc_call *rpc_call_t;
/**
 * Definition of RPC event handler block type.
 */
typedef void (^rpc_handler_t)(const char *path, const char *interface,
    const char *name, rpc_object_t args);
/**
 * Definition of RPC error handler block type.
 */
typedef void (^rpc_error_handler_t)(rpc_error_code_t code, rpc_object_t args);
rpc_connection_t rpc_connection_create(void *cookie, rpc_object_t params);
/**
 * Closes the connection and frees all resources associated with it.
 *
 * @param conn Connection to close
 * @return 0 on success, -1 on failure
 */
int rpc_connection_close(rpc_connection_t conn);
/**
 * Subscribes for an event.
 *
 * This function can be called multiple times on a single event name -
 * subsequent calls will not send a subscribe message to the server,
 * but instead increment internal reference count for a subscription.
 *
 * Calls to rpc_connection_subscribe_event() must be paired with
 * rpc_connection_unsubscribe_event().
 *
 * @param conn Connection to subscribe on
 * @param name Event name
 * @return 0 on success, -1 on failure
 */
int rpc_connection_subscribe_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name);
/**
 * Undoes previous event subscription.
 *
 * This function may either:
 * - decrement reference count of subscription for given event
 * - send unsubscribe message to the server (when subscription reference count
 *   reached value of 0)
 *
 * @param conn Connection to undo the subscription on
 * @param name Event name
 * @return 0 on success, -1 on failure
 */
int rpc_connection_unsubscribe_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name);
/**
 * Performs a synchronous RPC method call using a given connection.
 *
 * Function blocks until a result is ready and returns it, or cancels
 * and returns a NULL pointer if a timeout has occurred.
 *
 * Method call arguments need to be rpc_object_t instances, followed with
 * a NULL, denoting end of variable argument list.
 *
 * @param conn Connection to do a call on
 * @param method Name of a method to be called
 * @param ... Called method arguments
 * @return Result of the call
 */
rpc_object_t rpc_connection_call_sync(rpc_connection_t conn,
    const char *path, const char *interface, const char *method, ...);
/**
 * Performs a RPC method call using a given connection.
 *
 * Function returns immediately without waiting for a RPC completion
 * and returns rpc_call_t object representing the ongoing call.
 *
 * Function supports a callback argument of rpc_callback_t type,
 * which is a pointer to a function to be called on RPC completion.
 * Can be set to NULL when that functionality is not needed by the caller.
 *
 * @param conn Connection to do a call on
 * @param name Name of a method to be called
 * @param args Variable length RPC method arguments list
 * @param callback Callback function pointer to be called on RPC completion
 * @return RPC call object
 */
rpc_call_t rpc_connection_call(rpc_connection_t conn, const char *path,
    const char *interface, const char *name, rpc_object_t args,
    rpc_callback_t callback);
/**
 * Sends an event.
 *
 * @param conn Connection to send event across
 * @param name Event name
 * @param args Event arguments or NULL
 * @return 0 on success, -1 on failure
 */
int rpc_connection_send_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name, rpc_object_t args);
/**
 * Waits for a call to change status.
 *
 * @param call Call to wait on.
 * @return 0 on success, -1 on failure.
 */
int rpc_call_wait(rpc_call_t call);
/**
 * Requests a next chunk of a result from a call.
 *
 * When sync is set to true the function waits until the call finishes
 * and returns 1 if it has completed successfully - otherwise the function
 * returns 0.
 *
 * @param call Call to be continued
 * @param sync Synchronous continue flag
 * @return 1 for successfully completed RPC when sync flag was set, otherwise 0
 */
int rpc_call_continue(rpc_call_t call, bool sync);
/**
 * Aborts a pending call.
 *
 * @param call Call to be aborted
 * @return Function status - success is being reported as 0
 */
int rpc_call_abort(rpc_call_t call);
/**
 * Checks whether a call has been completed successfully.
 *
 * @param call Call to be checked
 * @return 1 when call was successfully completed, otherwise 0
 */
int rpc_call_success(rpc_call_t call);
/**
 * Returns a call result (or a current fragment).
 *
 * @param call Call to get result from
 * @return Result
 */
rpc_object_t rpc_call_result(rpc_call_t call);
/**
 * Frees a rpc_call_t object.
 *
 * @param call Call to free
 */
void rpc_call_free(rpc_call_t call);