include/rpc/service.h

/**
 * RPC context structure definition.
 */
struct rpc_context;
/**
 * RPC context structure pointer definition.
 */
typedef struct rpc_context *rpc_context_t;
/**
 * Definition of RPC method block type.
 */
typedef rpc_object_t (^rpc_function_t)(void *cookie, rpc_object_t args);
/**
 * Definition of RPC method function type.
 */
typedef rpc_object_t (*rpc_function_f)(void *cookie, rpc_object_t args);
/**
 *
 */
typedef rpc_object_t (^rpc_property_getter_t)(void *cookie);
/**
 *
 */
typedef void (^rpc_property_setter_t)(void *cookie, rpc_object_t value);
/**
 * Creates a new RPC context.
 *
 * @return Newly created RPC context object.
 */
rpc_context_t rpc_context_create(void);
/**
 * Disposes existing RPC context and frees all associated resources.
 *
 * @param context Context to dispose
 */
void rpc_context_free(rpc_context_t context);
/**
 * Returns the argument associated with method.
 *
 * @param cookie Running call identifier.
 */
void *rpc_function_get_arg(void *cookie);
/**
 * Sends a response to a call.
 *
 * This function may be called only once during the lifetime of a single
 * call (for a given cookie). When called, return value of a method
 * is silently ignored (it is preferred to return NULL).
 *
 * @param cookie Running call identifier.
 * @param object Response.
 */
void rpc_function_respond(void *cookie, rpc_object_t object);
/**
 * Sends an error response to a call.
 *
 * This function may be called only once during the lifetime of a single
 * call (for a given cookie). When called, return value of a method
 * is silently ignored (it is preferred to return NULL).
 *
 * When called in a streaming function, implicitly ends streaming response.
 *
 * @param cookie Running call identifier.
 * @param code Error (errno) code.
 * @param message Error message format.
 * @param ... Format arguments.
 */
void rpc_function_error(void *cookie, int code, const char *message, ...);
/**
 * Reports an exception for a given ongoing call identifier.
 *
 * @param cookie Running call identifier.
 * @param exception Exception data.
 */
void rpc_function_error_ex(void *cookie, rpc_object_t exception);
/**
 * Ends a streaming response.
 *
 * When that function is called, sending further responses (either singular,
 * streaming or error responses) is not allowed. Return value of a method
 * functions is ignored.
 *
 * @param cookie Running call identifier.
 */
void rpc_function_end(void *cookie);